fix app alignment

--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,6 @@
   height: 100vh;
 }
 
-.page {
-  height: 100vh;
-  position: fixed;
-  width: 100vh;
-}
-
 .fade-enter {
   opacity: 0;
 }
